crates/bindings/c/obrain.h

/* ---- Status codes -------------------------------------------------------- */

typedef enum {
    OBRAIN_OK                  = 0,
    OBRAIN_ERROR_DATABASE      = 1,
    OBRAIN_ERROR_QUERY         = 2,
    OBRAIN_ERROR_TRANSACTION   = 3,
    OBRAIN_ERROR_STORAGE       = 4,
    OBRAIN_ERROR_IO            = 5,
    OBRAIN_ERROR_SERIALIZATION = 6,
    OBRAIN_ERROR_INTERNAL      = 7,
    OBRAIN_ERROR_NULL_POINTER  = 8,
    OBRAIN_ERROR_INVALID_UTF8  = 9
} ObrainStatus;
/* ---- Opaque types -------------------------------------------------------- */

typedef struct ObrainDatabase    ObrainDatabase;
typedef struct ObrainTransaction ObrainTransaction;
typedef struct ObrainResult      ObrainResult;
int32_t      obrain_drop_property_index(ObrainDatabase* db, const char* property);
int32_t      obrain_has_property_index(ObrainDatabase* db, const char* property);
ObrainStatus obrain_find_nodes_by_property(ObrainDatabase* db, const char* property, const char* value_json, uint64_t** out_ids, size_t* out_count);
void         obrain_free_node_ids(uint64_t* ids, size_t count);
/* ---- Vector operations --------------------------------------------------- */

ObrainStatus obrain_create_vector_index(ObrainDatabase* db, const char* label, const char* property, int32_t dimensions, const char* metric, int32_t m, int32_t ef_construction);
int32_t      obrain_drop_vector_index(ObrainDatabase* db, const char* label, const char* property);
ObrainStatus obrain_rebuild_vector_index(ObrainDatabase* db, const char* label, const char* property);
ObrainStatus obrain_vector_search(ObrainDatabase* db, const char* label, const char* property, const float* query, size_t query_len, size_t k, int32_t ef, uint64_t** out_ids, float** out_distances, size_t* out_count);
ObrainStatus obrain_mmr_search(ObrainDatabase* db, const char* label, const char* property, const float* query, size_t query_len, size_t k, int32_t fetch_k, float lambda, int32_t ef, uint64_t** out_ids, float** out_distances, size_t* out_count);
ObrainStatus obrain_batch_create_nodes(ObrainDatabase* db, const char* label, const char* property, const float* vectors, size_t vector_count, size_t dimensions, uint64_t** out_ids);
void         obrain_free_vector_results(uint64_t* ids, float* distances, size_t count);
/* ---- Statistics ---------------------------------------------------------- */

size_t obrain_node_count(ObrainDatabase* db);
size_t obrain_edge_count(ObrainDatabase* db);
/* ---- Transactions -------------------------------------------------------- */

ObrainTransaction* obrain_begin_transaction(ObrainDatabase* db);
ObrainTransaction* obrain_begin_transaction_with_isolation(ObrainDatabase* db, int32_t isolation);
ObrainResult*      obrain_transaction_execute(ObrainTransaction* tx, const char* query);
ObrainResult*      obrain_transaction_execute_with_params(ObrainTransaction* tx, const char* query, const char* params_json);
ObrainStatus       obrain_commit(ObrainTransaction* tx);
ObrainStatus       obrain_rollback(ObrainTransaction* tx);
void               obrain_free_transaction(ObrainTransaction* tx);
/* ---- Admin --------------------------------------------------------------- */

char*        obrain_info(ObrainDatabase* db);
ObrainStatus obrain_save(ObrainDatabase* db, const char* path);
ObrainStatus obrain_wal_checkpoint(ObrainDatabase* db);