crates/bindings/dart/lib/src/ffi/bindings.dart


  /// Drop a property index. Returns 0 on success, -1 on error.
  late final obrainDropPropertyIndex = library.lookupFunction<
    Int32 Function(Pointer<Void>, Pointer<Utf8>),
    int Function(Pointer<Void>, Pointer<Utf8>)
  >('obrain_drop_property_index');

  /// Check if a property index exists. Returns 1 if exists, 0 if not.
  late final obrainHasPropertyIndex = library.lookupFunction<
    Int32 Function(Pointer<Void>, Pointer<Utf8>),
    int Function(Pointer<Void>, Pointer<Utf8>)
  >('obrain_has_property_index');

  /// Find nodes by property value. Writes IDs to [outIds], count to [outCount].
  late final obrainFindNodesByProperty = library.lookupFunction<
    Int32 Function(
      Pointer<Void>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Pointer<Uint64>>,
      Pointer<IntPtr>,
    ),
    int Function(
      Pointer<Void>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Pointer<Uint64>>,
      Pointer<IntPtr>,
    )
  >('obrain_find_nodes_by_property');

  /// Free a node ID array returned by obrainFindNodesByProperty.
  late final obrainFreeNodeIds = library.lookupFunction<
    Void Function(Pointer<Uint64>, IntPtr),
    void Function(Pointer<Uint64>, int)
  >('obrain_free_node_ids');

  // ===========================================================================
  // Vector operations
  // ===========================================================================

  /// Create a vector index. Returns ObrainStatus.
  late final obrainCreateVectorIndex = library.lookupFunction<
    Int32 Function(
      Pointer<Void>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Int32,
      Pointer<Utf8>,
      Int32,
      Int32,
    ),
    int Function(
      Pointer<Void>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      int,
      Pointer<Utf8>,
      int,
      int,
    )
  >('obrain_create_vector_index');

  /// Drop a vector index. Returns 0 on success, -1 on error.
  late final obrainDropVectorIndex = library.lookupFunction<
    Int32 Function(Pointer<Void>, Pointer<Utf8>, Pointer<Utf8>),
    int Function(Pointer<Void>, Pointer<Utf8>, Pointer<Utf8>)
  >('obrain_drop_vector_index');

  /// Rebuild a vector index. Returns ObrainStatus.
  late final obrainRebuildVectorIndex = library.lookupFunction<
    Int32 Function(Pointer<Void>, Pointer<Utf8>, Pointer<Utf8>),
    int Function(Pointer<Void>, Pointer<Utf8>, Pointer<Utf8>)
  >('obrain_rebuild_vector_index');

  /// Vector similarity search.
  late final obrainVectorSearch = library.lookupFunction<
    Int32 Function(
      Pointer<Void>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Float>,
      IntPtr,
      IntPtr,
      Int32,
      Pointer<Pointer<Uint64>>,
      Pointer<Pointer<Float>>,
      Pointer<IntPtr>,
    ),
    int Function(
      Pointer<Void>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Float>,
      int,
      int,
      int,
      Pointer<Pointer<Uint64>>,
      Pointer<Pointer<Float>>,
      Pointer<IntPtr>,
    )
  >('obrain_vector_search');

  /// MMR (Maximal Marginal Relevance) search.
  late final obrainMmrSearch = library.lookupFunction<
    Int32 Function(
      Pointer<Void>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Float>,
      IntPtr,
      IntPtr,
      Int32,
      Float,
      Int32,
      Pointer<Pointer<Uint64>>,
      Pointer<Pointer<Float>>,
      Pointer<IntPtr>,
    ),
    int Function(
      Pointer<Void>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Float>,
      int,
      int,
      int,
      double,
      int,
      Pointer<Pointer<Uint64>>,
      Pointer<Pointer<Float>>,
      Pointer<IntPtr>,
    )
  >('obrain_mmr_search');

  /// Batch-create nodes with vector embeddings.
  late final obrainBatchCreateNodes = library.lookupFunction<
    Int32 Function(
      Pointer<Void>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Float>,
      IntPtr,
      IntPtr,
      Pointer<Pointer<Uint64>>,
    ),
    int Function(
      Pointer<Void>,
      Pointer<Utf8>,
      Pointer<Utf8>,
      Pointer<Float>,
      int,
      int,
      Pointer<Pointer<Uint64>>,
    )
  >('obrain_batch_create_nodes');

  /// Free vector search results.
  late final obrainFreeVectorResults = library.lookupFunction<
    Void Function(Pointer<Uint64>, Pointer<Float>, IntPtr),
    void Function(Pointer<Uint64>, Pointer<Float>, int)
  >('obrain_free_vector_results');

  // ===========================================================================
  // Statistics
  // ===========================================================================

  /// Get the number of nodes.
  late final obrainNodeCount = library.lookupFunction<
    IntPtr Function(Pointer<Void>),
    int Function(Pointer<Void>)
  >('obrain_node_count');

  /// Get the number of edges.
  late final obrainEdgeCount = library.lookupFunction<
    IntPtr Function(Pointer<Void>),
    int Function(Pointer<Void>)
  >('obrain_edge_count');

  // ===========================================================================
  // Transactions
  // ===========================================================================

  /// Begin a transaction. Returns null on error.
  late final obrainBeginTransaction = library.lookupFunction<
    Pointer<Void> Function(Pointer<Void>),
    Pointer<Void> Function(Pointer<Void>)
  >('obrain_begin_transaction');

  /// Begin a transaction with a specific isolation level.
  late final obrainBeginTransactionWithIsolation = library.lookupFunction<
    Pointer<Void> Function(Pointer<Void>, Int32),
    Pointer<Void> Function(Pointer<Void>, int)
  >('obrain_begin_transaction_with_isolation');

  /// Execute a query within a transaction.
  late final obrainTransactionExecute = library.lookupFunction<
    Pointer<Void> Function(Pointer<Void>, Pointer<Utf8>),
    Pointer<Void> Function(Pointer<Void>, Pointer<Utf8>)
  >('obrain_transaction_execute');

  /// Execute a parameterized query within a transaction.
  late final obrainTransactionExecuteWithParams = library.lookupFunction<
    Pointer<Void> Function(Pointer<Void>, Pointer<Utf8>, Pointer<Utf8>),
    Pointer<Void> Function(Pointer<Void>, Pointer<Utf8>, Pointer<Utf8>)
  >('obrain_transaction_execute_with_params');

  /// Commit a transaction. Returns ObrainStatus.
  late final obrainCommit = library.lookupFunction<
    Int32 Function(Pointer<Void>),
    int Function(Pointer<Void>)
  >('obrain_commit');

  /// Rollback a transaction. Returns ObrainStatus.
  late final obrainRollback = library.lookupFunction<
    Int32 Function(Pointer<Void>),
    int Function(Pointer<Void>)
  >('obrain_rollback');

  /// Free a transaction handle.
  late final obrainFreeTransaction = library.lookupFunction<
    Void Function(Pointer<Void>),
    void Function(Pointer<Void>)
  >('obrain_free_transaction');

  // ===========================================================================
  // Admin
  // ===========================================================================

  /// Get database info as JSON. Caller must free with obrainFreeString.
  late final obrainInfo = library.lookupFunction<
    Pointer<Utf8> Function(Pointer<Void>),
    Pointer<Utf8> Function(Pointer<Void>)
  >('obrain_info');

  /// Save a snapshot to the given path. Returns ObrainStatus.
  late final obrainSave = library.lookupFunction<
    Int32 Function(Pointer<Void>, Pointer<Utf8>),
    int Function(Pointer<Void>, Pointer<Utf8>)
  >('obrain_save');

  /// Force a WAL checkpoint. Returns ObrainStatus.
  late final obrainWalCheckpoint = library.lookupFunction<
    Int32 Function(Pointer<Void>),
    int Function(Pointer<Void>)
  >('obrain_wal_checkpoint');
}
